[gd_scene load_steps=15 format=3 uid="uid://birqkw8tvucet"]

[ext_resource type="Script" path="res://scripts/level_info.gd" id="1_er4oj"]
[ext_resource type="PackedScene" uid="uid://bbwsxk7ees7pq" path="res://components/btn_close.tscn" id="2_epcqu"]
[ext_resource type="Texture2D" uid="uid://dxivnebfn0y1i" path="res://src/images/game_bg/smb_ground.png" id="3_0pl61"]
[ext_resource type="PackedScene" uid="uid://dhvpspiyofi1x" path="res://components/btn.tscn" id="4_mb5xa"]
[ext_resource type="AudioStream" uid="uid://rwqpu88h6bw8" path="res://src/musics/effect/coursebot_select.ogg" id="5_o1xrl"]
[ext_resource type="AudioStream" uid="uid://c1er4n6la2oqu" path="res://src/musics/effect/coursebot_close.ogg" id="6_qh75w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1i1cp"]
bg_color = Color(0.121569, 0.164706, 0.270588, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="LabelSettings" id="LabelSettings_tn5iv"]
font_size = 48
font_color = Color(0.121569, 0.164706, 0.270588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_17gsp"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wf61y"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.12549)
shadow_size = 1
shadow_offset = Vector2(0, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7f12q"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.12549)
shadow_size = 1
shadow_offset = Vector2(0, 8)

[sub_resource type="LabelSettings" id="LabelSettings_7wvyd"]
font_size = 32
font_color = Color(0.121569, 0.164706, 0.270588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8canv"]
font_size = 32
font_color = Color(0.121569, 0.164706, 0.270588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_evuol"]
font_size = 36
font_color = Color(0, 0, 0, 0.564706)

[node name="LevelInfo" type="CanvasLayer"]
script = ExtResource("1_er4oj")

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -784.0
offset_top = -284.0
offset_right = 785.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.87451, 0.894118, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 94.0
grow_horizontal = 2
color = Color(0.490196, 0.698039, 0.568627, 1)

[node name="Panel" type="Panel" parent="ColorRect2/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -19.5
offset_right = 61.0
offset_bottom = 19.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1i1cp")

[node name="title" type="Label" parent="ColorRect2/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 71.0
offset_top = -46.0
offset_right = 1479.0
offset_bottom = 47.0
grow_vertical = 2
text = "Title"
label_settings = SubResource("LabelSettings_tn5iv")
vertical_alignment = 1

[node name="BtnClose" parent="ColorRect2/ColorRect" instance=ExtResource("2_epcqu")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -36.0
offset_right = -15.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2

[node name="levelIcon" type="TextureRect" parent="ColorRect2"]
layout_mode = 0
offset_left = 54.5
offset_top = 165.5
offset_right = 694.5
offset_bottom = 525.5
texture = ExtResource("3_0pl61")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="ColorRect2/levelIcon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -53.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.498039)

[node name="date" type="Label" parent="ColorRect2/levelIcon/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 178.0
offset_bottom = 16.5
grow_vertical = 2
text = "0000-00-00"
label_settings = SubResource("LabelSettings_17gsp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = 767.0
offset_top = 134.0
offset_right = 1528.0
offset_bottom = 560.0
color = Color(1, 1, 1, 0)

[node name="Btn" parent="ColorRect2/buttons" instance=ExtResource("4_mb5xa")]
layout_mode = 1
offset_right = 761.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wf61y")

[node name="Label" parent="ColorRect2/buttons/Btn" index="0"]
text = "text_make"

[node name="Btn2" parent="ColorRect2/buttons" instance=ExtResource("4_mb5xa")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 105.0
offset_right = 0.0
offset_bottom = 193.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7f12q")

[node name="Label" parent="ColorRect2/buttons/Btn2" index="0"]
text = "text_play"

[node name="Btn3" parent="ColorRect2/buttons" instance=ExtResource("4_mb5xa")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 211.0
offset_right = 0.0
offset_bottom = 299.0
grow_horizontal = 2

[node name="Label" parent="ColorRect2/buttons/Btn3" index="0"]
text = "text_upload_level"

[node name="Btn4" parent="ColorRect2/buttons" instance=ExtResource("4_mb5xa")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 317.0
offset_right = -461.0
offset_bottom = 425.0
grow_horizontal = 2

[node name="Label" parent="ColorRect2/buttons/Btn4" index="0"]
offset_top = 55.0
offset_bottom = 2.0
text = "text_level_name"
label_settings = SubResource("LabelSettings_7wvyd")

[node name="Btn5" parent="ColorRect2/buttons" instance=ExtResource("4_mb5xa")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 311.5
offset_top = 316.5
offset_right = -149.5
offset_bottom = 424.5
grow_horizontal = 2

[node name="Label" parent="ColorRect2/buttons/Btn5" index="0"]
offset_top = 59.0
text = "text_level_desc"
label_settings = SubResource("LabelSettings_8canv")

[node name="ColorRect2" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -191.0
offset_right = -52.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.188235)

[node name="desc" type="Label" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = -175.0
offset_right = -46.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
text = "Desc"
label_settings = SubResource("LabelSettings_evuol")
vertical_alignment = 1

[node name="AudioSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o1xrl")

[node name="AudioClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qh75w")

[editable path="ColorRect2/buttons/Btn"]
[editable path="ColorRect2/buttons/Btn2"]
[editable path="ColorRect2/buttons/Btn3"]
[editable path="ColorRect2/buttons/Btn4"]
[editable path="ColorRect2/buttons/Btn5"]
